Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.0 Alpha
-
Fix Version/s: 6.2.0 RC
-
Component/s: Documentation, WebEngine
-
Labels:None
-
Commits:e3cc8e0283daa989ca6957a7100c2c11669f5d1f (qt/qtwebengine/dev) 031b93abed083562bee555da02c0fc56369d10bf (qt/qtwebengine/6.2)
Description
- Fix missing images in https://doc-snapshots.qt.io/qt6-6.2/qtwebengine-overview.html
- Remove explicit version from QML imports in code snippets
- Consider removing mentions of changes in nowadays ancient / unsupported Qt versions
- Document CMake alongside qmake API in Qt WebEngine Core C++ Classes, Qt WebEngine Widgets C++ Classes, Qt WebEngine C++ Classes
- Show qmake, CMake information in class overview documentation by defining \qtcmakepackage, \qtvariable
- Fix link "Qt for Windows - Requirements" in https://doc-snapshots.qt.io/qt6-6.2/qtwebengine-platform-notes.html
Attachments
Issue Links
- relates to
-
QTBUG-94933 Add Qt 6 Porting Guide to Qt WebEngine
-
- Closed
-
For Gerrit Dashboard: QTBUG-94937 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
365358,2 | Update documentation notes for build with WebEngine modules | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
365468,2 | Update documentation notes for build with WebEngine modules | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |