Update documentation notes for build with WebEngine modules

Add cmake usage snippets for module's libraries. Remove quick version
from code snippets. Fix minor documentation warnings.

Fixes: QTBUG-94937
Change-Id: I2e5c8616ceeab495f604e135bb2aa2261c50c68d
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit e3cc8e0283daa989ca6957a7100c2c11669f5d1f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>